Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T00:53:14.598955Z",
-     "start_time": "2019-06-18T00:53:14.530629Z"
+     "end_time": "2019-06-18T00:54:16.156302Z",
+     "start_time": "2019-06-18T00:54:16.110941Z"
     }
    },
    "outputs": [
@@ -514,11 +514,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.049  0.067 -0.029  0.081  0.028  0.015  0.019 -0.002 -0.027  0.027]\n",
-      "0.078\n",
-      "-0.016\n",
-      "0.033807512\n",
-      "[0. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
+      "[-0.0489598   0.06677844 -0.02858866  0.08120442  0.02835873  0.01529872\n",
+      "  0.01864566 -0.00197705 -0.02703837  0.02656933]\n",
+      "0.034341916\n",
+      "[-0.          0.06677844 -0.02858866  0.08120442  0.02835873  0.01529872\n",
+      "  0.01864566 -0.00197705 -0.02703837  0.02656933]\n"
      ]
     }
    ],
@@ -526,21 +526,13 @@
     "# see \n",
     "temp = tf.random_normal([10],stddev=0.05,seed=4)\n",
     "temp_abs_mean  = tf.reduce_mean(tf.abs(temp))\n",
-    "temp_between1  = tf.where(-temp_abs_mean<=temp,tf.ones_like(temp),tf.zeros_like(temp))  \n",
+    "temp_between1  = tf.where(-temp_abs_mean<=temp,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
     "\n",
-    "print(np.around(temp.eval(),3))\n",
-    "print(np.around(temp.eval(),3).max())\n",
-    "print(np.around(temp.eval(),3).min())\n",
+    "all_of_data = sess.run([temp,temp_abs_mean,temp_between1])\n",
     "\n",
-    "print(temp_abs_mean.eval())\n",
-    "print(np.around(temp_between1.eval(),3))\n",
-    "\n",
-    "# temp = temp.eval()\n",
-    "# temp_abs_mean = temp_abs_mean.eval()\n",
-    "# print(temp.mean(),temp.std())\n",
-    "# print(temp_abs_mean)\n",
-    "\n",
-    "# plt.hist(temp.flatten(),bins=50); plt.show()\n"
+    "print(all_of_data[0])\n",
+    "print(all_of_data[1])\n",
+    "print(all_of_data[2])"
    ]
   }
  ],
