--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T00:54:16.156302Z",
-     "start_time": "2019-06-18T00:54:16.110941Z"
+     "end_time": "2019-06-18T00:56:08.000700Z",
+     "start_time": "2019-06-18T00:56:07.945480Z"
     }
    },
    "outputs": [
@@ -517,7 +517,7 @@
       "[-0.0489598   0.06677844 -0.02858866  0.08120442  0.02835873  0.01529872\n",
       "  0.01864566 -0.00197705 -0.02703837  0.02656933]\n",
       "0.034341916\n",
-      "[-0.          0.06677844 -0.02858866  0.08120442  0.02835873  0.01529872\n",
+      "[-0.          0.         -0.02858866  0.          0.02835873  0.01529872\n",
       "  0.01864566 -0.00197705 -0.02703837  0.02656933]\n"
      ]
     }
@@ -525,8 +525,10 @@
    "source": [
     "# see \n",
     "temp = tf.random_normal([10],stddev=0.05,seed=4)\n",
+    "temp_abs_max = tf.reduce_mean(tf.abs(temp))\n",
+    "temp_abs_min = tf.reduce_mean(tf.abs(temp))\n",
     "temp_abs_mean  = tf.reduce_mean(tf.abs(temp))\n",
-    "temp_between1  = tf.where(-temp_abs_mean<=temp,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
+    "temp_between1  = tf.where(-temp_abs_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp<temp_abs_mean,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
     "\n",
     "all_of_data = sess.run([temp,temp_abs_mean,temp_between1])\n",
     "\n",
