--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T00:56:47.838378Z",
-     "start_time": "2019-06-18T00:56:47.773042Z"
+     "end_time": "2019-06-18T00:59:09.800006Z",
+     "start_time": "2019-06-18T00:59:09.741689Z"
     }
    },
    "outputs": [
@@ -514,21 +514,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.0489598   0.06677844 -0.02858866  0.08120442  0.02835873  0.01529872\n",
-      "  0.01864566 -0.00197705 -0.02703837  0.02656933]\n",
+      "[-0.0489598   0.06677844 -0.02858866  0.08120442  0.02835873]\n",
       "0.08120442\n",
-      "0.0019770486\n",
-      "0.034341916\n",
-      "[-0.          0.         -0.02858866  0.          0.02835873  0.01529872\n",
-      "  0.01864566 -0.00197705 -0.02703837  0.02656933]\n"
+      "-0.048959803\n",
+      "0.05077801\n",
+      "[-0.0489598   0.         -0.02858866  0.          0.02835873]\n"
      ]
     }
    ],
    "source": [
     "# see \n",
-    "temp = tf.random_normal([10],stddev=0.05,seed=4)\n",
-    "temp_abs_max = tf.reduce_max(tf.abs(temp))\n",
-    "temp_abs_min = tf.reduce_min(tf.abs(temp))\n",
+    "temp = tf.random_normal([5],stddev=0.05,seed=4)\n",
+    "temp_abs_max = tf.reduce_max(temp)\n",
+    "temp_abs_min = tf.reduce_min(temp)\n",
     "temp_abs_mean  = tf.reduce_mean(tf.abs(temp))\n",
     "temp_between1  = tf.where(-temp_abs_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp<temp_abs_mean,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
     "\n",
