Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 67,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T00:59:09.800006Z",
-     "start_time": "2019-06-18T00:59:09.741689Z"
+     "end_time": "2019-06-18T01:00:54.772884Z",
+     "start_time": "2019-06-18T01:00:54.708111Z"
     }
    },
    "outputs": [
@@ -514,21 +514,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-0.0489598   0.06677844 -0.02858866  0.08120442  0.02835873]\n",
-      "0.08120442\n",
-      "-0.048959803\n",
-      "0.05077801\n",
-      "[-0.0489598   0.         -0.02858866  0.          0.02835873]\n"
+      "[-0.9791961  1.3355689 -0.5717732  1.6240884  0.5671745]\n",
+      "1.6240884\n",
+      "-0.9791961\n",
+      "1.0155603\n",
+      "[-0.9791961  1.3355689 -0.5717732  1.6240884  0.5671745]\n"
      ]
     }
    ],
    "source": [
     "# see \n",
-    "temp = tf.random_normal([5],stddev=0.05,seed=4)\n",
+    "temp = tf.random_normal([5],stddev=1,seed=4)\n",
     "temp_abs_max = tf.reduce_max(temp)\n",
     "temp_abs_min = tf.reduce_min(temp)\n",
     "temp_abs_mean  = tf.reduce_mean(tf.abs(temp))\n",
-    "temp_between1  = tf.where(-temp_abs_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp<temp_abs_mean,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
+    "temp_between1  = tf.where(temp_abs_mean<temp,tf.ones_like(temp),tf.zeros_like(temp))  * temp + tf.where(temp_abs_mean>temp,tf.ones_like(temp),tf.zeros_like(temp)) *temp\n",
     "\n",
     "all_of_data = sess.run([temp,temp_abs_max,temp_abs_min,temp_abs_mean,temp_between1])\n",
     "\n",
