Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:00:54.772884Z",
-     "start_time": "2019-06-18T01:00:54.708111Z"
+     "end_time": "2019-06-18T01:02:31.438532Z",
+     "start_time": "2019-06-18T01:02:31.372711Z"
     }
    },
    "outputs": [
@@ -518,17 +518,21 @@
       "1.6240884\n",
       "-0.9791961\n",
       "1.0155603\n",
-      "[-0.9791961  1.3355689 -0.5717732  1.6240884  0.5671745]\n"
+      "[-0.         1.3355689 -0.         1.6240884  0.       ]\n"
      ]
     }
    ],
    "source": [
     "# see \n",
     "temp = tf.random_normal([5],stddev=1,seed=4)\n",
+    "\n",
+    "temp_pos = tf.where(temp>0,tf.ones_like(temp),tf.zeros_like(temp))\n",
+    "temp_pos_mean = tf.reduce_mean(temp_pos)\n",
+    "\n",
     "temp_abs_max = tf.reduce_max(temp)\n",
     "temp_abs_min = tf.reduce_min(temp)\n",
     "temp_abs_mean  = tf.reduce_mean(tf.abs(temp))\n",
-    "temp_between1  = tf.where(temp_abs_mean<temp,tf.ones_like(temp),tf.zeros_like(temp))  * temp + tf.where(temp_abs_mean>temp,tf.ones_like(temp),tf.zeros_like(temp)) *temp\n",
+    "temp_between1  = tf.where(temp>temp_pos_mean,tf.ones_like(temp),tf.zeros_like(temp))  * temp\n",
     "\n",
     "all_of_data = sess.run([temp,temp_abs_max,temp_abs_min,temp_abs_mean,temp_between1])\n",
     "\n",
