Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 70,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:02:31.438532Z",
-     "start_time": "2019-06-18T01:02:31.372711Z"
+     "end_time": "2019-06-18T01:03:12.806322Z",
+     "start_time": "2019-06-18T01:03:12.737887Z"
     }
    },
    "outputs": [
@@ -518,7 +518,7 @@
       "1.6240884\n",
       "-0.9791961\n",
       "1.0155603\n",
-      "[-0.         1.3355689 -0.         1.6240884  0.       ]\n"
+      "[-0.9791961  0.        -0.5717732  0.         0.       ]\n"
      ]
     }
    ],
@@ -532,7 +532,7 @@
     "temp_abs_max = tf.reduce_max(temp)\n",
     "temp_abs_min = tf.reduce_min(temp)\n",
     "temp_abs_mean  = tf.reduce_mean(tf.abs(temp))\n",
-    "temp_between1  = tf.where(temp>temp_pos_mean,tf.ones_like(temp),tf.zeros_like(temp))  * temp\n",
+    "temp_between1  = tf.where(temp_pos<temp_pos_mean,tf.ones_like(temp),tf.zeros_like(temp))  * temp\n",
     "\n",
     "all_of_data = sess.run([temp,temp_abs_max,temp_abs_min,temp_abs_mean,temp_between1])\n",
     "\n",
