Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 86,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:06:12.075615Z",
-     "start_time": "2019-06-18T01:06:12.016770Z"
+     "end_time": "2019-06-18T01:08:36.496477Z",
+     "start_time": "2019-06-18T01:08:36.431663Z"
     }
    },
    "outputs": [
@@ -515,7 +515,9 @@
      "output_type": "stream",
      "text": [
       "[-0.9791961  1.3355689 -0.5717732  1.6240884  0.5671745]\n",
-      "[0. 1. 0. 1. 1.]\n"
+      "[0. 1. 0. 1. 1.]\n",
+      "1.1756105\n",
+      "[-0.9791961  0.        -0.5717732  0.         0.5671745]\n"
      ]
     }
    ],
@@ -523,18 +525,22 @@
     "# see \n",
     "temp = tf.random_normal([5],stddev=1,seed=4)\n",
     "\n",
-    "temp_pos = tf.where(temp>0,tf.ones_like(temp),tf.zeros_like(temp))\n",
-    "temp_pos_mean = (temp_pos*temp)/tf.re\n",
+    "temp_pos      = tf.where(temp>0,tf.ones_like(temp),tf.zeros_like(temp))\n",
+    "temp_pos_mean = tf.reduce_sum(temp_pos*temp)/tf.reduce_sum(temp_pos)\n",
+    "temp_between1 = tf.where(temp_pos_mean>temp,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
     "\n",
-    "temp_abs_max = tf.reduce_max(temp)\n",
-    "temp_abs_min = tf.reduce_min(temp)\n",
-    "temp_abs_mean  = tf.reduce_mean(tf.abs(temp))\n",
-    "temp_between1  = tf.where(temp_pos<temp_pos_mean,tf.ones_like(temp),tf.zeros_like(temp))  * temp_pos\n",
+    "temp_neg      = tf.where(temp<0,tf.ones_like(temp),tf.zeros_like(temp))\n",
+    "temp_neg_mean = tf.reduce_sum(temp_neg*temp)/tf.reduce_sum(temp_neg)\n",
+    "temp_between2 = tf.where(temp_pos_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
     "\n",
-    "all_of_data = sess.run([temp,temp_pos])\n",
+    "all_of_data = sess.run([temp,temp_pos,temp_pos_mean,temp_between1,temp_neg,temp_neg_mean,temp_between2])\n",
     "\n",
     "print(all_of_data[0])\n",
-    "print(all_of_data[1])\n"
+    "print(all_of_data[1])\n",
+    "print(all_of_data[2])\n",
+    "print(all_of_data[3])\n",
+    "\n",
+    "\n"
    ]
   }
  ],
