Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 92,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:08:36.496477Z",
-     "start_time": "2019-06-18T01:08:36.431663Z"
+     "end_time": "2019-06-18T01:10:52.549936Z",
+     "start_time": "2019-06-18T01:10:52.452677Z"
     }
    },
    "outputs": [
@@ -517,7 +517,10 @@
       "[-0.9791961  1.3355689 -0.5717732  1.6240884  0.5671745]\n",
       "[0. 1. 0. 1. 1.]\n",
       "1.1756105\n",
-      "[-0.9791961  0.        -0.5717732  0.         0.5671745]\n"
+      "[-0.9791961  0.        -0.5717732  0.         0.5671745]\n",
+      "[1. 0. 1. 0. 0.]\n",
+      "-0.7754846\n",
+      "[-0.         1.3355689 -0.5717732  1.6240884  0.5671745]\n"
      ]
     }
    ],
@@ -531,14 +534,22 @@
     "\n",
     "temp_neg      = tf.where(temp<0,tf.ones_like(temp),tf.zeros_like(temp))\n",
     "temp_neg_mean = tf.reduce_sum(temp_neg*temp)/tf.reduce_sum(temp_neg)\n",
-    "temp_between2 = tf.where(temp_pos_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
+    "temp_between2 = tf.where(temp_neg_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
     "\n",
-    "all_of_data = sess.run([temp,temp_pos,temp_pos_mean,temp_between1,temp_neg,temp_neg_mean,temp_between2])\n",
+    "all_of_data = sess.run([temp,\n",
+    "                        temp_pos,temp_pos_mean,temp_between1,\n",
+    "                        temp_neg,temp_neg_mean,temp_between2])\n",
     "\n",
     "print(all_of_data[0])\n",
+    "\n",
     "print(all_of_data[1])\n",
     "print(all_of_data[2])\n",
     "print(all_of_data[3])\n",
+    "\n",
+    "print(all_of_data[4])\n",
+    "print(all_of_data[5])\n",
+    "print(all_of_data[6])\n",
+    "\n",
     "\n",
     "\n"
    ]
