Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 97,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:10:52.549936Z",
-     "start_time": "2019-06-18T01:10:52.452677Z"
+     "end_time": "2019-06-18T01:12:38.942729Z",
+     "start_time": "2019-06-18T01:12:38.843352Z"
     }
    },
    "outputs": [
@@ -517,10 +517,9 @@
       "[-0.9791961  1.3355689 -0.5717732  1.6240884  0.5671745]\n",
       "[0. 1. 0. 1. 1.]\n",
       "1.1756105\n",
-      "[-0.9791961  0.        -0.5717732  0.         0.5671745]\n",
       "[1. 0. 1. 0. 0.]\n",
       "-0.7754846\n",
-      "[-0.         1.3355689 -0.5717732  1.6240884  0.5671745]\n"
+      "[-0.         0.        -0.5717732  0.         0.5671745]\n"
      ]
     }
    ],
@@ -530,15 +529,15 @@
     "\n",
     "temp_pos      = tf.where(temp>0,tf.ones_like(temp),tf.zeros_like(temp))\n",
     "temp_pos_mean = tf.reduce_sum(temp_pos*temp)/tf.reduce_sum(temp_pos)\n",
-    "temp_between1 = tf.where(temp_pos_mean>temp,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
     "\n",
     "temp_neg      = tf.where(temp<0,tf.ones_like(temp),tf.zeros_like(temp))\n",
     "temp_neg_mean = tf.reduce_sum(temp_neg*temp)/tf.reduce_sum(temp_neg)\n",
-    "temp_between2 = tf.where(temp_neg_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * temp\n",
+    "\n",
+    "temp_between  = tf.where(temp_neg_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp_pos_mean>temp,tf.ones_like(temp),tf.zeros_like(temp))  * temp\n",
     "\n",
     "all_of_data = sess.run([temp,\n",
-    "                        temp_pos,temp_pos_mean,temp_between1,\n",
-    "                        temp_neg,temp_neg_mean,temp_between2])\n",
+    "                        temp_pos,temp_pos_mean,\n",
+    "                        temp_neg,temp_neg_mean,temp_between])\n",
     "\n",
     "print(all_of_data[0])\n",
     "\n",
@@ -548,7 +547,6 @@
     "\n",
     "print(all_of_data[4])\n",
     "print(all_of_data[5])\n",
-    "print(all_of_data[6])\n",
     "\n",
     "\n",
     "\n"
