Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -502,11 +502,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 100,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:12:38.942729Z",
-     "start_time": "2019-06-18T01:12:38.843352Z"
+     "end_time": "2019-06-18T01:17:06.730194Z",
+     "start_time": "2019-06-18T01:17:06.633425Z"
     }
    },
    "outputs": [
@@ -519,7 +519,7 @@
       "1.1756105\n",
       "[1. 0. 1. 0. 0.]\n",
       "-0.7754846\n",
-      "[-0.         0.        -0.5717732  0.         0.5671745]\n"
+      "[-0.  0. -0.  0.  0.]\n"
      ]
     }
    ],
@@ -533,7 +533,9 @@
     "temp_neg      = tf.where(temp<0,tf.ones_like(temp),tf.zeros_like(temp))\n",
     "temp_neg_mean = tf.reduce_sum(temp_neg*temp)/tf.reduce_sum(temp_neg)\n",
     "\n",
-    "temp_between  = tf.where(temp_neg_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp_pos_mean>temp,tf.ones_like(temp),tf.zeros_like(temp))  * temp\n",
+    "temp_between  = tf.where(temp_neg_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp_pos_mean>temp,tf.ones_like(temp),tf.zeros_like(temp)) \n",
+    "\n",
+    "temp_between  = tf.where(temp_neg_mean>temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp_pos_mean<temp,tf.ones_like(temp),tf.zeros_like(temp))  * temp\n",
     "\n",
     "all_of_data = sess.run([temp,\n",
     "                        temp_pos,temp_pos_mean,\n",
