Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -141,6 +141,22 @@
     "            strides=[1,self.stride,self.stride,1],padding=self.padding\n",
     "        )\n",
     "\n",
+    "        \n",
+    "        grad_pos      = tf.where(grad>0,tf.ones_like(grad),tf.zeros_like(grad))\n",
+    "        grad_pos_mean = tf.reduce_sum(grad_pos*grad)/tf.reduce_sum(grad_pos)\n",
+    "        \n",
+    "        grad_neg      = tf.where(grad<0,tf.ones_like(grad),tf.zeros_like(grad))\n",
+    "        grad_neg_mean = tf.reduce_sum(grad_neg*grad)/tf.reduce_sum(grad_neg)\n",
+    "        \n",
+    "        grad_between  = \n",
+    "\n",
+    "        temp_between  = tf.where(temp_neg_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp_pos_mean>temp,tf.ones_like(temp),tf.zeros_like(temp)) \n",
+    "\n",
+    "        temp1 = temp_between * temp\n",
+    "        temp2 = (1-temp_between) * temp\n",
+    "\n",
+    "\n",
+    "        \n",
     "        update_w = []\n",
     "        update_w.append(tf.assign( self.m,self.m*beta1 + (1-beta1) * (grad)   ))\n",
     "        update_w.append(tf.assign( self.v,self.v*beta2 + (1-beta2) * (grad ** 2)   ))\n",
@@ -502,11 +518,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 102,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-18T01:17:06.730194Z",
-     "start_time": "2019-06-18T01:17:06.633425Z"
+     "end_time": "2019-06-18T01:17:45.508045Z",
+     "start_time": "2019-06-18T01:17:45.410305Z"
     }
    },
    "outputs": [
@@ -519,7 +535,8 @@
       "1.1756105\n",
       "[1. 0. 1. 0. 0.]\n",
       "-0.7754846\n",
-      "[-0.  0. -0.  0.  0.]\n"
+      "[-0.         0.        -0.5717732  0.         0.5671745]\n",
+      "[-0.9791961  1.3355689 -0.         1.6240884  0.       ]\n"
      ]
     }
    ],
@@ -535,11 +552,12 @@
     "\n",
     "temp_between  = tf.where(temp_neg_mean<temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp_pos_mean>temp,tf.ones_like(temp),tf.zeros_like(temp)) \n",
     "\n",
-    "temp_between  = tf.where(temp_neg_mean>temp,tf.ones_like(temp),tf.zeros_like(temp)) * tf.where(temp_pos_mean<temp,tf.ones_like(temp),tf.zeros_like(temp))  * temp\n",
+    "temp1 = temp_between * temp\n",
+    "temp2 = (1-temp_between) * temp\n",
     "\n",
     "all_of_data = sess.run([temp,\n",
     "                        temp_pos,temp_pos_mean,\n",
-    "                        temp_neg,temp_neg_mean,temp_between])\n",
+    "                        temp_neg,temp_neg_mean,temp1,temp2])\n",
     "\n",
     "print(all_of_data[0])\n",
     "\n",
@@ -549,6 +567,8 @@
     "\n",
     "print(all_of_data[4])\n",
     "print(all_of_data[5])\n",
+    "print(all_of_data[6])\n",
+    "\n",
     "\n",
     "\n",
     "\n"
