Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -437,7 +437,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Iter : 1/30 batch : 4650/8000 acc : 0.28 cost : 1.9173465\r"
+      "Current: 1\tTrain Acc: 0.18579999975860118\tTrain Cost: 2.158721383810043\tTest Acc: 0.22550000073388218\tTest Cost: 1.9806409940123557\tLR: 0.0008\n",
+      "Current: 2\tTrain Acc: 0.26839999951422217\tTrain Cost: 1.9222579681873322\tTest Acc: 0.298250000551343\tTest Cost: 1.8465021438896656\tLR: 0.0008\n",
+      "Current: 3\tTrain Acc: 0.3216000011563301\tTrain Cost: 1.795080337524414\tTest Acc: 0.34637500075623395\tTest Cost: 1.7438177734613418\tLR: 0.0008\n",
+      "Current: 4\tTrain Acc: 0.36620000049471857\tTrain Cost: 1.6968134725093842\tTest Acc: 0.3837499997578561\tTest Cost: 1.6646159686148168\tLR: 0.0008\n",
+      "Current: 5\tTrain Acc: 0.39599999994039536\tTrain Cost: 1.6449253618717194\tTest Acc: 0.39162500146776436\tTest Cost: 1.640199113637209\tLR: 0.0008\n",
+      "Current: 6\tTrain Acc: 0.41219999998807905\tTrain Cost: 1.583752999305725\tTest Acc: 0.3972500001080334\tTest Cost: 1.6245796881616115\tLR: 0.0008\n",
+      "Current: 7\tTrain Acc: 0.43199999958276747\tTrain Cost: 1.5479006886482238\tTest Acc: 0.3979999992065132\tTest Cost: 1.6023490451276303\tLR: 0.0008\n",
+      "Current: 8\tTrain Acc: 0.4295999994874001\tTrain Cost: 1.534543092250824\tTest Acc: 0.4133750003762543\tTest Cost: 1.5790651470422745\tLR: 0.0008\n",
+      "Current: 9\tTrain Acc: 0.4525999975204468\tTrain Cost: 1.4793607568740845\tTest Acc: 0.4318749990314245\tTest Cost: 1.5370066225528718\tLR: 0.0008\n",
+      "Current: 10\tTrain Acc: 0.45019999831914903\tTrain Cost: 1.4605844962596892\tTest Acc: 0.42274999963119625\tTest Cost: 1.5576063632965087\tLR: 0.0008\n",
+      "Current: 11\tTrain Acc: 0.4669999983906746\tTrain Cost: 1.4458532202243806\tTest Acc: 0.4259999990463257\tTest Cost: 1.5461960144340992\tLR: 0.0008\n",
+      "Current: 12\tTrain Acc: 0.4771999993920326\tTrain Cost: 1.4243351995944977\tTest Acc: 0.44274999797344206\tTest Cost: 1.5131035603582859\tLR: 0.0008\n",
+      "Current: 13\tTrain Acc: 0.4861999976634979\tTrain Cost: 1.3942467701435088\tTest Acc: 0.444624999165535\tTest Cost: 1.5181571446359157\tLR: 0.0008\n",
+      "Current: 14\tTrain Acc: 0.4923999962210655\tTrain Cost: 1.375604658126831\tTest Acc: 0.4543749986216426\tTest Cost: 1.497846996039152\tLR: 0.0008\n",
+      "Current: 15\tTrain Acc: 0.493400000333786\tTrain Cost: 1.35897496342659\tTest Acc: 0.44174999967217443\tTest Cost: 1.5187796495854855\tLR: 0.0008\n",
+      "Current Iter : 16/30 batch : 4700/5000 acc : 0.54 cost : 1.3547571\r"
      ]
     }
    ],
