Super important commit

--- a/gradient_sign_change/1 STL 10  Adam.ipynb
+++ b/gradient_sign_change/1 STL 10  Adam.ipynb
@@ -350,10 +350,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T01:21:00.623Z"
+     "end_time": "2019-06-18T01:21:12.208591Z",
+     "start_time": "2019-06-18T01:21:11.512448Z"
     }
    },
    "outputs": [],
@@ -402,10 +403,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T01:21:00.957Z"
+     "end_time": "2019-06-18T01:21:12.415050Z",
+     "start_time": "2019-06-18T01:21:12.261486Z"
     }
    },
    "outputs": [
@@ -426,10 +428,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-18T01:21:01.514Z"
+     "end_time": "2019-06-18T01:25:13.455653Z",
+     "start_time": "2019-06-18T01:21:12.468897Z"
     }
    },
    "outputs": [
@@ -452,7 +455,21 @@
       "Current: 13\tTrain Acc: 0.4861999976634979\tTrain Cost: 1.3942467701435088\tTest Acc: 0.444624999165535\tTest Cost: 1.5181571446359157\tLR: 0.0008\n",
       "Current: 14\tTrain Acc: 0.4923999962210655\tTrain Cost: 1.375604658126831\tTest Acc: 0.4543749986216426\tTest Cost: 1.497846996039152\tLR: 0.0008\n",
       "Current: 15\tTrain Acc: 0.493400000333786\tTrain Cost: 1.35897496342659\tTest Acc: 0.44174999967217443\tTest Cost: 1.5187796495854855\tLR: 0.0008\n",
-      "Current Iter : 16/30 batch : 4700/5000 acc : 0.54 cost : 1.3547571\r"
+      "Current: 16\tTrain Acc: 0.5022000002861023\tTrain Cost: 1.3365914511680603\tTest Acc: 0.46650000009685755\tTest Cost: 1.461505265533924\tLR: 0.0008\n",
+      "Current: 17\tTrain Acc: 0.5000000005960464\tTrain Cost: 1.3298272132873534\tTest Acc: 0.46587499920278785\tTest Cost: 1.4768462412059307\tLR: 0.0008\n",
+      "Current: 18\tTrain Acc: 0.5247999987006188\tTrain Cost: 1.305471235513687\tTest Acc: 0.4612499985843897\tTest Cost: 1.4899793788790703\tLR: 0.0008\n",
+      "Current: 19\tTrain Acc: 0.511800000667572\tTrain Cost: 1.3146464383602143\tTest Acc: 0.4428749980404973\tTest Cost: 1.5364667065441608\tLR: 0.0008\n",
+      "Current: 20\tTrain Acc: 0.5138000017404556\tTrain Cost: 1.310493801832199\tTest Acc: 0.4583749998360872\tTest Cost: 1.4798161581158638\tLR: 0.0008\n",
+      "Current: 21\tTrain Acc: 0.527000000178814\tTrain Cost: 1.2909403491020202\tTest Acc: 0.4719999983906746\tTest Cost: 1.4625903323292733\tLR: 0.0008\n",
+      "Current: 22\tTrain Acc: 0.5300000044703483\tTrain Cost: 1.2778454500436782\tTest Acc: 0.4771249987185001\tTest Cost: 1.4506224781274795\tLR: 0.0008\n",
+      "Current: 23\tTrain Acc: 0.5126000002026558\tTrain Cost: 1.3064423787593842\tTest Acc: 0.47012499924749135\tTest Cost: 1.4691736049950124\tLR: 0.0008\n",
+      "Current: 24\tTrain Acc: 0.53\tTrain Cost: 1.272086724638939\tTest Acc: 0.4641249986365438\tTest Cost: 1.4820801559835672\tLR: 0.0008\n",
+      "Current: 25\tTrain Acc: 0.5472000035643577\tTrain Cost: 1.2412868732213973\tTest Acc: 0.4753749988041818\tTest Cost: 1.4724121436476707\tLR: 0.0008\n",
+      "Current: 26\tTrain Acc: 0.5416000014543534\tTrain Cost: 1.245195311307907\tTest Acc: 0.46399999782443047\tTest Cost: 1.463557492941618\tLR: 0.0008\n",
+      "Current: 27\tTrain Acc: 0.5418000015616417\tTrain Cost: 1.246935453414917\tTest Acc: 0.47037499900907276\tTest Cost: 1.4789953745901585\tLR: 0.0008\n",
+      "Current: 28\tTrain Acc: 0.5424000000953675\tTrain Cost: 1.2586309999227523\tTest Acc: 0.4779999997466803\tTest Cost: 1.452463871985674\tLR: 0.0008\n",
+      "Current: 29\tTrain Acc: 0.5466000002622604\tTrain Cost: 1.2291623890399932\tTest Acc: 0.4776249984279275\tTest Cost: 1.4454680487513543\tLR: 0.0008\n",
+      "Current: 30\tTrain Acc: 0.5470000007748603\tTrain Cost: 1.2384335911273956\tTest Acc: 0.47324999757111075\tTest Cost: 1.455143967270851\tLR: 0.0008\n"
      ]
     }
    ],
